# CHiTO

./: README.md
chito_public/src/CHiTO_Planner/: CMakeLists.txt  package.xml
chito_public/src/CHiTO_Planner/config/: kinematics_wrapper.yaml  qp_traj_opt.yaml  qp_traj_opt_params.yaml
chito_public/src/CHiTO_Planner/launch/: bench_ur5.launch.py  qp_traj_opt_node.launch.py  ur_moveit_chomp.launch.py
chito_public/src/CHiTO_Planner/src/: Corridor_Viz_Moveit_Initik.cpp  Corridor_Viz_Moveit_Initik_withtorch.cpp  corridor_spacerrt_ik_viz.cpp  corridor_viz_moveit_ik.cpp  generate_perturbed_joint_paths.cpp  hierarchical_opt.cpp  scene_spacerrt_dh_ik_stats.cpp  scene_spacerrt_dh_ik_stats_withtorch.cpp
chito_public/src/CHiTO_Planner/src/safe_corridor/: corridor_aabbs.txt  safety_corridor.txt  safety_corridor_inters.txt  safety_corridor_polys.txt
chito_public/src/collision/: convex_scene.yaml  scene1.scene  scene2.scene  scene3.scene
chito_public/src/hyj_ur5_robotiq_description/: CMakeLists.txt  package.xml
chito_public/src/hyj_ur5_robotiq_description/launch/: display_tmp_urdf.launch.py
chito_public/src/hyj_ur5_robotiq_description/urdf/: ur5_robotiq_2f85.urdf.xacro
chito_public/src/planner/: CMakeLists.txt
chito_public/src/planner/config/: benchmark_params.yaml  plan_benchmark_demo_chomp.yaml  plan_benchmark_demo_ompl.yaml  plan_benchmark_scene3_gripper_waypoints.yaml  scene3_gripper.yaml
chito_public/src/planner/launch/: load_obstacles.launch.py  run_demo.launch (copy).py  run_demo.launch.py  scene3_gripper_bench.launch.py  scene3_gripper_bench_headless.launch.py  ur5_obstacles_demo.launch.py
chito_public/src/ur5_robotiq_moveit_config/: CMakeLists.txt  fk_params.yaml  package.xml
chito_public/src/ur5_robotiq_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur5_robotiq_2f85.ros2_control.xacro  ur5_robotiq_2f85.srdf  ur5_robotiq_2f85.urdf.xacro
chito_public/src/ur5_robotiq_moveit_config/launch/: demo.launch (copy).py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
